# hue_mcp

./: .dockerignore  .env.docker  .env.example  .gitignore  Dockerfile  README-Docker.md  README.md  docker-compose.yml  pyproject.toml  setup.py
PRPs/: hue-mcp-server.md
PRPs/ai_docs/: fastmcp_async_patterns.md  hue_api_patterns.md
doc/: PRD.md
src/hue_mcp/: __init__.py  __main__.py  config.py  hue_client.py  light_manager.py  mcp_instance.py  server.py
src/hue_mcp/tools/: __init__.py  discovery.py  light_control.py  room_control.py
tests/: conftest.py  test_hue_client.py  test_simple_functionality.py
tests/test_tools/: __init__.py  test_light_control.py
